ambientimpact_base/stylesheets/elements/_list.scss
// -----------------------------------------------------------------------------
//   Base list partial
// -----------------------------------------------------------------------------

///
/// List marker indent.
///
/// This gives the list just enough space on the side to display and correctly
/// line up list markers.
///
$list-marker-indent: 1.2em !default;

///
/// List item spacing.
///
/// This is usually the vertical spacing between two list items.
///
$list-item-spacing: $general-spacing * 0.5 !default;

///
/// Multicolumn list max column count.
///
$list-multicolumn-count: 6 !default;

///
/// Multicolumn list column width.
///
$list-multicolumn-width: 10em !default;

///
/// Multicolumn list column gap.
///
/// This includes the list marker indent so that columns other than the first
/// have the correct indent to match the indent on the list itself.
///
$list-multicolumn-gap: $list-marker-indent + $general-spacing !default;

///
/// Remove list styles, e.g. padding and bullets.
///
@mixin unlisted-list {
  @include root-conditions(('[dir=ltr]'), 'html') {
    padding-left:   0 !important;
  }
  @include root-conditions(('[dir=rtl]'), 'html') {
    padding-right:  0 !important;
  }

  li {
    // Remove horizontal margins on items in .item-list lists.
    @include root-conditions(('[dir=ltr]'), 'html') {
      margin-left:   0;
    }
    @include root-conditions(('[dir=rtl]'), 'html') {
      margin-right:  0;
    }

    list-style: none;
  }
}
.unlisted-list,
// If you use an 'item_list', you can pass it
// '#context' => ['list_style' => 'unlisted']
.item-list--unlisted .item-list__unlisted {
  @include unlisted-list;
}

.multicolumn-list {
  @supports (column-gap: $list-multicolumn-gap) {
    column-count: $list-multicolumn-count;
    column-width: $list-multicolumn-width;
    column-gap:   $list-multicolumn-gap;

    li {
      // Don't break to a new column within list items.
      //
      // @see http://stackoverflow.com/a/7785711

      // Chrome and Safari.
      -webkit-column-break-inside: avoid;
      // Firefox 20+.
      page-break-inside: avoid;
      // IE 11.
      break-inside: avoid-column;
    }
  }
}

// Default list styles.
@include content-area {
  @include vertical-spacing-against-previous(
    'ol, ul:not(.contextual-links)',
    $spacing-small: $content-item-vertical-spacing-small,
    $spacing-large: $content-item-vertical-spacing-large
  );

  li {
    // Nested lists use the list item spacing as anything else looks off.
    @include vertical-spacing-against-previous(
      'ol, ul:not(.contextual-links)',
      $spacing-small: $list-item-spacing,
      $spacing-large: $list-item-spacing
    );
  }

  ol,
  ul {
    &:not(.contextual-links):not(.links) {
      // This removes the default top margin but is overridden by the above when
      // a valid previous element is present.
      margin-top:     0;
      // We don't need a bottom margin.
      margin-bottom:  0;

      // This gives the list just enough space on the side to display and
      // correctly line up list markers.
      @include root-conditions(('[dir=ltr]'), 'html') {
        padding-left:   $list-marker-indent;
        padding-right:  0;
      }
      @include root-conditions(('[dir=rtl]'), 'html') {
        padding-left:   0;
        padding-right:  $list-marker-indent;
      }

      li {
        // Remove any default margins.
        margin: 0;
      }

      // The vertical-spacing-against-previous mixin is probably overkill here,
      // so just use a simple + combinator.
      li + li {
        margin-top: $list-item-spacing;
      }
    }
  }
}

